# gb_hcc2

./: .env.example  .gitignore  HUONG_DAN_BUILD_RELEASE.md  build_release.bat  design-content.json  design-dump.txt  docker-compose.yml  package-lock.json  package.json  start.bat  tsconfig.base.json
.claude/: launch.json
.github/workflows/: kiosk-ota-deploy.yml
apps/api/: package.json  tsconfig.json
apps/cms/: Dockerfile  next.config.ts  package.json
apps/kiosk/: next.config.ts  package.json  tsconfig.json
apps/kiosk/src-tauri/: Cargo.toml  tauri.conf.json
apps/kiosk/src-tauri/icons/: icon.icns
apps/kiosk/src-tauri/src/: lib.rs
automation-core/: package-lock.json  package.json
automation-core/src/: api.js  browser.js  index.js  input.js  protocol.js  recorder-inject.js  recorder.js  stdio-conn.js  steps.js
docs/: AI_ASSISTANT_PLATFORM.md  PHASE2-LOCATION-TENANCY.md  api.md  architecture.md  deployment.md  websocket.md
kiosk_api/: Dockerfile  package-lock.json  package.json  tsconfig.json
kiosk_api/prisma/: schema.prisma  seed-auth.js  seed-copydoc-categories.js  seed-procedures.js  seed-workflow.js
kiosk_api/src/: main.ts  (+3 more)
kiosk_client/: next.config.ts  package-lock.json  package.json  tsconfig.json
kiosk_client/src-tauri/: Cargo.toml  tauri.conf.json
kiosk_client/src-tauri/capabilities/: default.json
kiosk_client/src-tauri/src/: lib.rs  main.rs
kiosk_cms/: middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json
kiosk_runner/: package-lock.json  package.json
scripts/: db-ready.mjs  deploy-ota.ps1  env.mjs  package-windows-server-release.ps1  preflight.mjs  set-version.mjs  start-dev.mjs  sync-env.mjs
(+263 files in other folders)
