[package]
name = "smart_kiosk"
version = "1.0.0"
description = "Smart Government Kiosk Tauri runtime"
authors = ["Smart Kiosk Platform"]
edition = "2021"

[lib]
name = "smart_kiosk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# Native offline Vietnamese speech-to-text (Vosk). OFF by default: enabling it
# requires the libvosk native library on the link path + a Vietnamese model on
# disk. Build with `cargo build --features voice` (or tauri build --features voice).
[features]
voice = ["dep:vosk", "dep:cpal"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4"] }
vosk = { version = "0.3", optional = true }
cpal = { version = "0.15", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
] }
