[package]
name = "smart_kiosk"
version = "1.0.0"
description = "Smart Government Kiosk Tauri runtime"
authors = ["Smart Kiosk Platform"]
edition = "2021"

[lib]
name = "smart_kiosk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
